Update index.html with RESOURCES

--- a/index.html
+++ b/index.html
@@ -341,6 +341,15 @@
 
 </main>
 
+<hr />
+<div style="text-align:center; margin: 20px 0;">
+  <a href="https://github.com/saphahcentral/dom6027-library" 
+     style="color:blue; background-color:wheat; text-decoration:underline; font-weight:bold;">
+    ➤ MORE RESOURCES: Visit the DOM6027 Library
+  </a>
+</div>
+<hr />
+
 <footer style="text-align: center; margin-top: 40px; font-size: small;">
   &copy; 2025 Saphah Central Support
 </footer>
