--- a/index.html
+++ b/index.html
@@ -4,214 +4,57 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Saphah Central Support</title>
-  <link rel="stylesheet" href="style.css" />
+
+  <!-- Universal stylesheet -->
+  <link rel="stylesheet" href="https://saphahcentral.github.io/saphahcentral/style-public.css" />
+
   <style>
-    /* Inline styles for elements unique to this page, so style.css can stay clean */
-    .banner-red {
-      background-color: red;
-      border: 1px solid rgb(153, 0, 0);
-      color: white;
-      font-size: medium;
-      margin-bottom: 20px;
-      padding: 12px;
-      text-align: center;
-    }
-    .banner-red a {
-      margin-left: 5px;
-    }
-    .promo-banner {
-      background-color: cornsilk;
-      border-radius: 8px;
-      border: 2px solid rgb(194, 168, 95);
-      font-family: sans-serif;
-      padding: 16px;
-      text-align: center;
-    }
-    .notice {
-      color: red;
-      font-size: xx-small;
-      margin-bottom: 10px;
-      text-align: left;
-    }
-    .asr {
-      font-size: x-small;
-      margin-top: 10px;
-      text-align: left;
-    }
-    .header-logo {
-      margin-bottom: 1em;
-      text-align: center;
-    }
-    .header-logo img {
-      border: 2px solid;
-      width: 250px;
-      height: 250px;
-    }
-    h1.page-title {
-      color: #333333;
-      font-size: x-large;
-      margin: 0px;
-      text-align: center;
-      text-decoration: underline;
-    }
-    h1.subtitle {
-      font-size: x-large;
-      text-align: center;
-      margin-top: 0.5em;
-    }
-    h3.purpose {
-      color: #444444;
-      font-size: medium;
-      text-align: left;
-      margin-top: 10px;
-    }
+    /* Page-specific styles only */
     .urgent {
       color: red;
-      font-size: medium;
       margin-top: 20px;
-      text-align: left;
     }
+
     .whatsapp-chat {
-      align-items: center;
-      background: linear-gradient(135deg, rgb(37, 211, 102), rgb(18, 140, 126));
-      border-radius: 12px;
-      box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 10px;
-      color: white;
       display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 12px;
       font-family: Arial, sans-serif;
       font-size: 16px;
       font-weight: bold;
-      gap: 12px;
-      justify-content: center;
+      background: linear-gradient(135deg, rgb(37,211,102), rgb(18,140,126));
+      border-radius: 12px;
+      box-shadow: rgba(0,0,0,0.2) 0px 4px 10px;
       margin: 10px auto;
       max-width: 320px;
       padding: 12px 20px;
       text-align: center;
+      color: white;
     }
-    .whatsapp-chat img {
-      border-radius: 6px;
-      height: 32px;
-      width: 32px;
-    }
-    hr {
-      margin: 2em 0;
-    }
-    fieldset.coverage {
-      background-color: cornsilk;
-      border: 3px solid black;
-      padding: 1rem;
-    }
-    fieldset.coverage h3 {
-      font-size: xx-large;
-      text-align: center;
-      text-decoration: underline;
-    }
-    .site-blocks {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-      justify-content: center;
-      margin: 2rem 0;
-    }
-    .site-block {
-      background-color: white;
-      border-radius: 10px;
-      border: 2px solid gray;
-      max-width: 220px;
-      padding: 1rem;
-      text-align: center;
-    }
-    .site-block img {
-      border: 2px solid;
-      max-width: 100%;
-      height: auto;
-    }
-    .site-block ul, .site-block div {
-      font-weight: bold;
-      margin-top: 0.5rem;
-      text-align: left;
-      padding-left: 1em;
-    }
-    .site-block ul li {
-      margin-bottom: 0.2rem;
-    }
-    h2 {
-      margin-top: 2em;
-    }
-    ul, ol {
-      margin-left: 1.5em;
-    }
-    .seo-section h2 {
-      font-size: x-small;
-      font-weight: bold;
-      text-align: center;
-    }
-    .seo-list {
-      font-size: large;
-      font-weight: 400;
-      margin-top: 1em;
-    }
-    .hashtags {
-      font-size: x-large;
-      font-weight: bold;
-      margin-top: 2em;
-    }
-    .hashtags + div {
-      font-size: large;
-      font-weight: 400;
-      margin-top: 0.5em;
-    }
-    .related-hashtags ol li {
-      font-size: large;
-      font-weight: 400;
-      margin-bottom: 0.5em;
-    }
+
+    .whatsapp-chat img { border-radius: 6px; height: 32px; width: 32px; }
+
+    .hashtags { font-size: x-large; font-weight: bold; margin-top: 2em; }
+    .hashtags + div { font-size: large; font-weight: 400; margin-top: 0.5em; }
   </style>
 </head>
 <body>
 
-<header>
-  <h1 style="text-align: center;">Saphah Central Support</h1>
-</header>
+<!-- Dynamic header -->
+<div id="header-placeholder"></div>
 
-<nav style="text-align: center; margin: 20px;">
-  <a href="index.html">Home</a> |
-  <a href="index2.html">Index</a> |
-  <a href="about.html">About</a> |
-  <a href="contact.html">Contact</a> |
-  <a href="https://scs6027info.blogspot.com/p/disclosures.html" target="_blank">Disclosures</a> |
-  <a href="https://scs6027info.blogspot.com/p/stats.html" target="_blank">Promo Info</a>
-</nav>
+<!-- Dynamic nav bar -->
+<div id="nav-placeholder"></div>
 
 <main style="max-width: 800px; margin: auto; padding: 20px;">
 
-  <!--Advertising Banner-->
-  <div class="banner-red">
-    🌐 <strong>Want your website shone all over the web?</strong>
-    <a href="https://lla5785.wordpress.com/offer/" target="_blank">Click here to get started!</a>
-  </div>
-
-  <!--PROMO INFO Banner-->
-  <div class="promo-banner">
-    <a href="https://scs6027info.blogspot.com/p/stats.html" target="_blank" style="font-weight: bold;">📣 View The Current Sites Where We Are Promoting</a>
-  </div>
-
-  <!--ASR Section-->
-  <div class="asr">
-    This website is indexed by <a href="https://activesearchresults.com/help/about.php" target="_blank">Active Search Results</a>.
-  </div>
-
-  <!--Header Image-->
-  <div class="header-logo">
-    <a href="https://cdn-images.imagevenue.com/6d/0b/66/ME1AW7GG_o.png" target="_blank" rel="noopener noreferrer">
-      <img alt="Saphah Central Support Logo" src="https://cdn-images.imagevenue.com/6d/0b/66/ME1AW7GG_o.png" width="250" height="250" />
-    </a>
-  </div>
-
-  <!--Page Titles-->
+  <!-- Page Titles -->
   <h1 class="page-title">SAPHAH CENTRAL SUPPORT</h1>
   <h1 class="subtitle">HOW CAN WE HELP YOU?</h1>
-  <h3 class="purpose">Saphah Central Support is your one-stop help desk for all site-related concerns, tech issues, and user support. We’re here to assist you - fast.</h3>
+  <h3 class="purpose">
+    Saphah Central Support is your one-stop help desk for all site-related concerns, tech issues, and user support. We’re here to assist you - fast.
+  </h3>
 
   <div class="urgent">
     <strong>Need help right now?</strong> Go to the <u style="background-color: #fcff01;"><b>CONTACT US</b></u> page - or use the form below (on full website view).
@@ -225,139 +68,50 @@
 
   <hr />
 
-  <!--Coverage Section-->
+  <!-- Coverage Section -->
   <fieldset class="coverage">
     <h3>WEBSITE SUPPORT FOR:</h3>
+    <ul>
+      <li><a href="https://saphahcentral.github.io/saphah/index.html" target="_blank">Saphah Central Services</a></li>
+      <li><a href="https://saphahcentral.github.io/dom6027/index.html" target="_blank">Derech Olam Ministries ‌Int'l</a></li>
+      <li><a href="https://saphahcentral.github.io/dots6027/index.html" target="_blank">Derech Olam Training Services</a></li>
+      <li><a href="https://saphahcentral.github.io/dows6027/index.html" target="_blank">Derech Olam Warning Services</a></li>
+      <li><a href="https://saphahcentral.github.io/soar2024/index.html" target="_blank">Soar Support Group</a></li>
+    </ul>
 
-    <div class="site-blocks">
-      <div class="site-block">
-        <a href="https://t.me/lastwarners" target="_blank" rel="noopener noreferrer">
-          <img alt="The Last Warners Ministry Logo" src="https://cdn-images.imagevenue.com/2e/f7/82/ME1AW7FV_o.jpg" height="150" width="197" />
-        </a>
-        <div>
-          <ul>
-            <li><a href="https://metusalah-elias.blogspot.com/p/home.html" target="_blank">The Last Warners Ministry (Warning Ministry)</a></li>
-            <li><a href="https://lastwarners2024.blogspot.com/p/home.html" target="_blank">Berith Haphak Saphah Ministries Int'l</a></li>
-            <li><a href="https://eternalpath6027.wordpress.com/" target="_blank">The Eternal Path Training Service</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="site-block">
-        <a href="https://maranatha-e-church.blogspot.com/p/home.html" target="_blank" rel="noopener noreferrer">
-          <img alt="Maranatha E-Church Int'l Logo" src="https://cdn-images.imagevenue.com/2d/df/d9/ME1AW7G8_o.png" height="200" width="200" />
-        </a>
-        <div>
-          <a href="https://maranatha-e-church.blogspot.com/p/home.html" target="_blank">Maranatha E-Church Int'l</a>
-        </div>
-      </div>
-
-      <div class="site-block">
-        <a href="https://soarsupport2024.blogspot.com/p/home.html" target="_blank" rel="noopener noreferrer">
-          <img alt="Soar Support Group Logo" src="https://cdn-images.imagevenue.com/ab/16/df/ME1AW7GL_o.png" height="201" width="201" />
-        </a>
-        <div>
-          <a href="https://soarsupport2024.blogspot.com/p/home.html" target="_blank">Soar Support Group</a>
-        </div>
-      </div>
-
-      <div class="site-block">
-        <a href="https://gilead2024.blogspot.com/p/home.html" target="_blank" rel="noopener noreferrer">
-          <img alt="GILEAD Charity Services Logo" src="https://cdn-images.imagevenue.com/d9/d4/21/ME1AW7GW_o.png" height="192" width="192" />
-        </a>
-        <div>
-          <a href="https://gilead2024.blogspot.com/p/home.html" target="_blank">GILEAD Charity Services</a>
-        </div>
-      </div>
-
-      <div class="site-block">
-        <a href="https://lla5785.wordpress.com/lighthouse-lifetime-ads-2/" target="_blank" rel="noopener noreferrer">
-          <img alt="Lighthouse Lifetime Ads Logo" src="https://cdn-images.imagevenue.com/64/1b/fc/ME1AW7GR_o.png" height="185" width="185" />
-        </a>
-        <div>
-          <ul>
-            <li><a href="https://lla5785.wordpress.com/lighthouse-lifetime-ads-2/" target="_blank">Lighthouse Lifetime Ads (main site)</a></li>
-            <li><a href="https://lla5785.blogspot.com/p/lighhouse-lfetime-ads.html" target="_blank">Lighthouse Lifetime Ads (extra site)</a></li>
-            <li><a href="https://messianicduck5785.blogspot.com/p/home.html" target="_blank">Lighthouse Lifetime Ads Blog</a></li>
-            <li><a href="https://lla5785emails.blogspot.com/p/subscribe.html" target="_blank">Lighthouse Lifetime Ads Email Subscription Site</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="site-block">
-        <a href="https://globalwarnings6027.wordpress.com/" target="_blank" rel="noopener noreferrer">
-          <img alt="Global Warnings 6027 AA Logo" src="https://cdn-images.imagevenue.com/11/05/f4/ME1AW7FW_o.png" height="200" width="200" />
-        </a>
-        <div>
-          <a href="https://globalwarnings6027.wordpress.com/" target="_blank">Global Warnings 6027 AA</a>
-        </div>
-      </div>
-    </div>
+    <h3>WEBSITES WE MAINTAIN FOR CUSTOMERS:</h3>
+    <ul>
+      <li><a href="https://estcourthospice.blogspot.com/p/home.html" target="_blank">Estcourt Hospice</a></li>
+      <li><a href="https://estcourt-cancer-support2025.blogspot.com/p/home.html" target="_blank">Estcourt Hospice Cancer Support Group</a></li>
+      <li><a href="https://matt28v19mc.wordpress.com/" target="_blank">Matt 28:19 Mobile Campus (development in progress)</a></li>
+    </ul>
   </fieldset>
-
-  <h2>Websites We Maintain For Customers</h2>
-  <ul>
-    <li><a href="https://estcourthospice.blogspot.com" target="_blank">Estcourt Hospice</a></li>
-    <li><a href="https://matt28v19mc.wordpress.com/" target="_blank">Matt 28:19 Mobile Campus (development in progress)</a></li>
-  </ul>
 
   <hr />
 
-  <!--SEO Section 2-->
+  <!-- SEO Section -->
   <div class="seo-section">
     <h2><span style="font-size: x-large; text-decoration: underline;">SEARCH ENGINE OPTIMIZATION</span></h2>
-    <div class="seo-list">
-      <ol>
-        <li><a href="https://www.activesearchresults.com/help/about.php" target="_blank">Active Search Results</a></li>
-        <li><a href="https://www.freewebsubmission.com" target="_blank">Free Web Submission</a></li>
-        <li><a href="http://www.submitexpress.com/localseo.html" target="_blank">Submit Express SEO</a></li>
-        <li><a href="https://www.websquash.com/" target="_blank">Web Squash SEO</a></li>
-        <li><a href="https://www.anoox.com/anoox_search_engine_overview.php" target="_blank">Anoox SEO</a></li>
-      </ol>
-    </div>
-  </div>
-
-  <!--Main Hashtag Section-->
-  <div class="hashtags">MAIN HASHTAG:</div>
-  <div>#SaphahSupport2024</div>
-
-  <!--Related Hashtags Section-->
-  <div class="hashtags related-hashtags">RELATED HASHTAGS:</div>
-  <div>
-    <ol>
-      <li>#lastwarners2024 and #BHS2024Ministry (linked to <a href="https://lastwarners2024.blogspot.com/p/home.html" target="_blank">Berith Haphak Saphah Int'l</a>)</li>
-      <li>#MaranathaEChurch2022 (linked to <a href="https://maranatha-e-church.blogspot.com/p/home.html" target="_blank">Maranatha E-Church Int'l</a>)</li>
-      <li>#MaranathaEChurchGilead2024 (linked to <a href="https://gilead2024.blogspot.com/p/home.html" target="_blank">Gilead Charity Service</a>)</li>
-      <li>#MessianicDuck5785 (linked to <a href="https://t.me/duck5785" target="_blank">Magdalena Sampson (BHS) on Telegram</a> &amp; <a href="https://messianicduck5785.blogspot.com/p/home.html" target="_blank">Lighthouse Lifetime Ads Blog</a>)</li>
-      <li>#LighthouseLifetimeAds2025 (linked to <a href="https://lla5785.wordpress.com/p/lighthouse-lifetime-ads-2/" target="_blank">Lighthouse Lifetime Ads (main)</a> and <a href="https://lla5785.blogspot.com/p/lighthouse-lifetime-ads.html" target="_blank">Lighthouse Lifetime Ads (extra)</a>)</li>
-      <li>#LighthouseEmailSeries2025 (linked to <a href="https://lla5785emails.blogspot.com/p/subscribe.html" target="_blank">Lighthouse Lifetime Email Subscription Site</a>)</li>
-      <li>#EternalPath6027 (linked to <a href="https://eternalpath6027.wordpress.com/" target="_blank">The Eternal Path Training Service</a>)</li>
-      <li>#SOARSupport2024 (linked to <a href="https://soarsupport2024.blogspot.com/p/home.html" target="_blank">SOAR Support Services</a>)</li>
-      <li>#GlobalWarnings6027AA (linked to <a href="https://globalwarnings6027.wordpress.com/" target="_blank">Global Warnings 6027 AA</a>)</li>
-      <li>#EstcourtHospice (linked to <a href="https://estcourthospice.blogspot.com/p/home.html" target="_blank">Estcourt Hospice</a>)</li>
-      <li>#Matt28v19Campus2025 (linked to <a href="https://matt28v19mc.wordpress.com/" target="_blank">Matt 28:19 Mobile Campus</a>)</li>
+    <ol class="seo-list">
+      <li><a href="https://www.activesearchresults.com/help/about.php" target="_blank">Active Search Results</a></li>
+      <li><a href="https://www.freewebsubmission.com" target="_blank">Free Web Submission</a></li>
+      <li><a href="http://www.submitexpress.com/localseo.html" target="_blank">Submit Express SEO</a></li>
+      <li><a href="https://www.websquash.com/" target="_blank">Web Squash SEO</a></li>
+      <li><a href="https://www.anoox.com/anoox_search_engine_overview.php" target="_blank">Anoox SEO</a></li>
     </ol>
   </div>
 
+  <!-- Main Hashtag Section -->
+  <div class="hashtags">MAIN HASHTAG:</div>
+  <div>#SaphahSupport2024</div>
+
 </main>
 
-<hr />
-<div style="text-align:center; margin: 20px 0; font-family:monospace;">
-  <a href="https://saphahcentral.github.io/saphahcentral/saphahcentral/index.html"
-     style="color:blue; background-color:wheat; text-decoration:underline; font-weight:bold;">
-    MAIN HUB
-  </a>
-  |
-  <a href="https://github.com/saphahcentral/dom6027-library"
-     style="color:blue; background-color:wheat; text-decoration:underline; font-weight:bold;">
-    MORE RESOURCES
-  </a>
-</div>
-<hr />
+<!-- Dynamic footer -->
+<div id="footer-placeholder"></div>
 
-<footer style="text-align: center; margin-top: 40px; font-size: small;">
-  &copy; 2025 Saphah Central Support
-</footer>
+<!-- Load dynamic includes -->
+<script src="https://saphahcentral.github.io/scs6027/js/load-includes.js"></script>
 
 </body>
 </html>
