Update ticket-status.html with new CSS link

--- a/ticket-status.html
+++ b/ticket-status.html
@@ -6,7 +6,7 @@
   <title>Ticket Status - SCS6027</title>
 
   <!-- Universal stylesheet -->
-  <link rel="stylesheet" href="https://saphahcentral.github.io/saphahcentral/style-public.css">
+  <link rel="stylesheet" href="https://saphahcentral.github.io/saphah/style-public.css">
 
   <!-- Page-specific JS -->
   <script src="https://saphahcentral.github.io/scs6027/js/load-includes.js" defer></script>
@@ -74,3 +74,4 @@
 
 </body>
 </html>
+
