Update not_found.html with new CSS link

--- a/not_found.html
+++ b/not_found.html
@@ -6,7 +6,7 @@
   <title>Page Not Found - 404</title>
 
   <!-- Universal stylesheet -->
-  <link rel="stylesheet" href="https://saphahcentral.github.io/saphahcentral/style-public.css" />
+  <link rel="stylesheet" href="https://saphahcentral.github.io/saphah/style-public.css" />
 
   <!-- Dynamic includes -->
   <script src="https://saphahcentral.github.io/scs6027/js/load-includes.js" defer></script>
@@ -58,3 +58,4 @@
 
 </body>
 </html>
+
