Update logout.html with new CSS link

--- a/logout.html
+++ b/logout.html
@@ -6,7 +6,7 @@
   <title>Logout - SCS6027</title>
 
   <!-- Universal stylesheet -->
-  <link rel="stylesheet" href="https://saphahcentral.github.io/saphahcentral/style-public.css">
+  <link rel="stylesheet" href="https://saphahcentral.github.io/saphah/style-public.css">
 
   <!-- JS for dynamic includes and auth -->
   <script src="https://saphahcentral.github.io/scs6027/js/load-includes.js" defer></script>
@@ -61,3 +61,4 @@
 
 </body>
 </html>
+
