Update logout.html with correct links

--- a/logout.html
+++ b/logout.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="https://saphahcentral.github.io/saphah/style-public.css">
 
   <!-- JS for dynamic includes and auth -->
-  <script src="https://saphahcentral.github.io/scs6027/js/load-includes.js" defer></script>
-  <script src="https://saphahcentral.github.io/scs6027/js/auth.js" defer></script>
+  <script src="https://saphahcentral.github.io/scs6027/load-includes.js" defer></script>
+  <script src="https://saphahcentral.github.io/scs6027/auth.js" defer></script>
 
   <style>
     /* Minimal page-specific styles */
@@ -61,4 +61,5 @@
 
 </body>
 </html>
+
 
