Update login.html with new CSS link

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Login - SCS6027</title>
-  <link rel="stylesheet" href="style-public.css">
+  <link rel="stylesheet" href="https://saphacentral.github.io/saphah/style-public.css">
   <script src="load-includes.js" defer></script>
   <script src="auth.js" defer></script>
 </head>
@@ -20,3 +20,4 @@
   <div id="footer"></div>
 </body>
 </html>
+
