Update index2.html with correct links

--- a/index2.html
+++ b/index2.html
@@ -6,10 +6,10 @@
   <title>Support Resources Index</title>
 
   <!-- Universal stylesheet -->
-  <link rel="stylesheet" href="https://saphahcentral.github.io/saphahcentral/style-public.css" />
+  <link rel="stylesheet" href="https://saphahcentral.github.io/saphah/style-public.css" />
 
   <!-- Dynamic includes -->
-  <script src="https://saphahcentral.github.io/scs6027/js/load-includes.js" defer></script>
+  <script src="https://saphahcentral.github.io/scs6027/load-includes.js" defer></script>
 
   <style>
     /* Page-specific styles only */
@@ -91,3 +91,4 @@
 
 </body>
 </html>
+
