Update index.html with new CSS link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Saphah Central Support</title>
 
   <!-- Universal stylesheet -->
-  <link rel="stylesheet" href="https://saphahcentral.github.io/saphahcentral/style-public.css" />
+  <link rel="stylesheet" href="https://saphahcentral.github.io/saphah/style-public.css" />
 
   <style>
     /* Page-specific styles only */
@@ -115,3 +115,4 @@
 
 </body>
 </html>
+
