Update contact.html with correct links

--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,10 @@
   <title>Contact Us – Saphah Central Support</title>
 
   <!-- Universal CSS -->
-  <link rel="stylesheet" href="https://saphahcentral.github.io/saphahcentral/style-public.css" />
+  <link rel="stylesheet" href="https://saphahcentral.github.io/saphah/style-public.css" />
 
   <!-- Dynamic includes -->
-  <script src="https://saphahcentral.github.io/scs6027/js/load-includes.js" defer></script>
+  <script src="https://saphahcentral.github.io/scs6027/load-includes.js" defer></script>
 
   <style>
     .centered-img {
@@ -107,3 +107,4 @@
 
 </body>
 </html>
+
