Update about.html with correct links

--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
   <title>About Our Support Services</title>
 
   <!-- Universal CSS -->
-  <link rel="stylesheet" href="https://saphahcentral.github.io/saphahcentral/style-public.css" />
+  <link rel="stylesheet" href="https://saphahcentral.github.io/saphah/style-public.css" />
 
   <!-- Dynamic includes -->
-  <script src="https://saphahcentral.github.io/scs6027/js/load-includes.js" defer></script>
+  <script src="https://saphahcentral.github.io/scs6027/load-includes.js" defer></script>
 
   <style>
     .centered-img {
@@ -93,3 +93,4 @@
 
 </body>
 </html>
+
