Update nav.html with new links

--- a/nav.html
+++ b/nav.html
@@ -1,8 +1,10 @@
 <nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="submit-ticket.html">Submit Ticket</a></li>
-    <li><a href="ticket-status.html">Check Status</a></li>
-    <li><a href="login.html">Login</a></li>
-  </ul>
+  <a href="index.html">Home</a> |
+  <a href="submit-ticket.html">Submit Ticket</a> |
+  <a href="ticket-status.html">Check Status</a></li> |
+  <a href="login.html">Login</a></li> |
+  <a href="https://saphahcentral.github.io/saphah/stats.html" target="_blank" rel="noopener noreferrer" style="color: white; font-weight: bold; text-decoration: none;">Promo Info</a> |
+  <a href="https://saphahcentral.github.io/saphah/disclosures.html" target="_blank" rel="noopener noreferrer" style="color: white; font-weight: bold; text-decoration: none;">Disclosures</a> |
+  <a href="https://saphahcentral.github.io/scs6027/index.html" target="_blank" rel="noopener noreferrer" style="color: white; font-weight: bold; text-decoration: none;">Support</a>
 </nav>
+
