Update index.html with internal images

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <!-- WhatsApp Chat -->
   <div class="whatsapp-chat">
-    <img alt="WhatsApp Logo" src="https://cdn-images.imagevenue.com/7e/91/36/ME1AW7Y0_o.png" />
+    <img alt="WhatsApp Logo" src="https://saphacentral.github.io/scs6027/WhatsAppLogo.png" />
     <a href="https://wa.me/27764172774" target="_blank">Chat with us on WhatsApp</a>
   </div>
 
@@ -115,4 +115,5 @@
 
 </body>
 </html>
+
 
