Update index2.html with internal images

--- a/index2.html
+++ b/index2.html
@@ -62,8 +62,8 @@
 <main style="max-width: 800px; margin: auto; padding: 20px;">
 
   <div class="centered-img">
-    <a href="https://cdn-images.imagevenue.com/77/b8/bd/ME1AW9PE_o.jpg" target="_blank" rel="noopener noreferrer">
-      <img alt="Index Icon" src="https://cdn-images.imagevenue.com/77/b8/bd/ME1AW9PE_o.jpg" />
+    <a href="https://saphahcentral.github.io/scs6027/index.jpg" target="_blank" rel="noopener noreferrer">
+      <img alt="Index Icon" src="https://saphahcentral.github.io/scs6027/index.jpg" />
     </a>
   </div>
 
@@ -91,4 +91,5 @@
 
 </body>
 </html>
+
 
