Update contact.html with internal images

--- a/contact.html
+++ b/contact.html
@@ -70,8 +70,8 @@
 
 <main style="max-width: 800px; margin: auto; padding: 20px;">
   <div class="centered-img">
-    <a href="https://cdn-images.imagevenue.com/01/13/fc/ME1AW9PC_o.png" target="_blank" rel="noopener noreferrer">
-      <img src="https://cdn-images.imagevenue.com/01/13/fc/ME1AW9PC_o.png" alt="Contact Us Icon" class="contact-img" />
+    <a href="https://saphahcentral.github.io/scs6027/Contact.png" target="_blank" rel="noopener noreferrer">
+      <img src="https://saphahcentral.github.io/scs6027/Contact.png" alt="Contact Us Icon" class="contact-img" />
     </a>
   </div>
 
@@ -106,5 +106,6 @@
 
 </body>
 </html>
+
 
 
