Update about.html with local images

--- a/about.html
+++ b/about.html
@@ -66,16 +66,16 @@
 
 <main style="max-width: 800px; margin: auto; padding: 20px;">
   <div class="centered-img">
-    <a href="https://cdn-images.imagevenue.com/6d/0b/66/ME1AW7GG_o.png" target="_blank">
-      <img src="https://cdn-images.imagevenue.com/6d/0b/66/ME1AW7GG_o.png" alt="Saphah Central Support Logo" class="logo-img" />
+    <a href="https://saphahcentral.github.io/scs6027/EagleSquareLogo125x125.png" target="_blank">
+      <img src="https://saphahcentral.github.io/scs6027/EagleSquareLogo125x125.png" alt="Saphah Central Support Logo" class="logo-img" />
     </a>
   </div>
 
   <h1 style="text-align: center;">SAPHAH CENTRAL SUPPORT</h1>
 
   <div>
-    <a href="https://cdn-images.imagevenue.com/b3/63/d3/ME1AW7GH_o.jpg" target="_blank">
-      <img src="https://cdn-images.imagevenue.com/b3/63/d3/ME1AW7GH_o.jpg" alt="Saphah Support Image" class="float-img" width="190" height="200" />
+    <a href="https://saphahcentral.github.io/scs6027/BigThingsHaveSmallBeginnings.jpg" target="_blank">
+      <img src="https://saphahcentral.github.io/scs6027/BigThingsHaveSmallBeginnings.jpg" alt="Saphah Support Image" class="float-img" width="190" height="200" />
     </a>
   </div>
 
@@ -93,4 +93,5 @@
 
 </body>
 </html>
+
 
